INF-36 first working prototype